Align elements in the save password dialog.

The username field is now align with the pop-up button for the password.
The save button is right-aligned with the username field.

Bug: 774505,780825
Change-Id: Iae200387cb25ddbc5a4b9b3d17dfb093b9bf5cfb
Reviewed-on: https://chromium-review.googlesource.com/751742
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Maxim Kolosovskiy <kolos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513727}
Former-commit-id: 1df038df6e19e70fd11342f9d5a4d9efbea098fc