chrome/browser/ui/cocoa/passwords/pending_password_view_controller.mm
@@ -113,20 +113,22 @@
 
   // Buttons go on the bottom row and are right-aligned.
   // Start with [Save].
-  CGFloat curX = width - kFramePadding + kRelatedControlHorizontalPadding;
-  CGFloat curY = kFramePadding;
+  CGFloat curX = 0;
+  CGFloat curY = 0;
 
   for (NSButton* button in buttons) {
-    curX -= kRelatedControlHorizontalPadding + NSWidth([button frame]);
+    if (button == buttons[0]) {
+      // The right side of the alignment rect is used for the padding.
+      curX = width - kFramePadding -
+             (NSMaxX([button alignmentRectForFrame:[button frame]]) -
+              NSMinX([button frame]));
+      curY = kFramePadding -
+             (NSMinY([button alignmentRectForFrame:[button frame]]) -
+              NSMinY([button frame]));
+    } else {
+      curX -= kRelatedControlHorizontalPadding + NSWidth([button frame]);
+    }
     [button setFrameOrigin:NSMakePoint(curX, curY)];
-  }
-
-  // Add the third button to the left if it was sent.
-  if ([buttons count] == 3) {
-    curX = kFramePadding - (NSWidth([buttons[2] frame]) -
-                            ([buttons[2] intrinsicContentSize]).width) /
-                               2;
-    [buttons[2] setFrameOrigin:NSMakePoint(curX, curY)];
   }
 
   curX = kFramePadding;
